--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         fill: orange;
       }
       .goal {
-        fill: lightblue;
+        fill: yellow;
       }
       .gameover {
         font-family: sans-serif;
@@ -62,7 +62,7 @@
       <g id="river" transform="translate(0,375)">
         <polygon class="river" points="0, 0 0, 200 600, 200 600, 0"></polygon>
       </g>
-
+      <!-- 
       <g id="goal" transform="translate(100,50)">
         <polygon
           class="goal"
@@ -112,7 +112,7 @@
           class="goldenfrog hidden"
           points="-12,12 12,12 0,-12"
         ></polygon>
-      </g>
+      </g> -->
 
       <g id="frog" transform="translate(100,100)">
         <polygon class="frog" points="-12,12 12,12 0,-12"></polygon>
